2012-10-16  Steven Bosscher  <steven@gcc.gnu.org>

	* combine.c (record_dead_and_set_regs): Iterate over hard register set
	with a hard_reg_set_iterator.
	* cse.c (invalidate_for_call): Likewise.
	* gcse.c (compute_hash_table_work): Likewise.
	* loop-iv.c (simplify_using_initial_values): Likewise.
	* postreload-gcse.c (record_opr_changes): Likewise.
	* regcprop.c (copyprop_hardreg_forward_1): Likewise.
	* var-tracking.c (dataflow_set_clear_at_call): Likewise.

2012-10-15   Easwaran Raman  <eraman@google.com>

	* optabs.c (emit_cmp_and_jump_insn_1): Add a new parameter to
	specificy the probability of taking the jump.
	(emit_cmp_and_jump_insns): Likewise.
	(expand_compare_and_swap_loop): Make the jump predicted not taken.
	* dojump.c (do_compare_rtx_and_jump): Remove the code attaching
	REG_BR_PROB note and pass probability to emit_cmp_and_jump_insns.
	* cfgbuild.c (compute_outgoing_frequencies): Do not guess outgoing
	probabilities for branches with more than two successors.
	* expr.c (emit_block_move_via_loop): Predict the loop backedge loop
	to be highly taken.
	(try_casesi): Pass the probability of jumping to the default label.
	(try_tablejump): Likewise.
	(do_tablejump): Likewise.
	* expr.h (try_tablejump): Add a new parameter.
	(try_casesi): Likewise.
	(emit_cmp_and_jump_insns): Add probability as default parameter with a
	default value of -1.
	* except.c (sjlj_emit_function_enter): Pass probability to
	emit_cmp_and_jump_insns.
	* stmt.c (case_node): Add new fields PROB and SUBTREE_PROB.
	(do_jump_if_equal): Pass probability for REG_BR_PROB note.
	(add_case_node): Pass estimated probability of jumping to the case
	label.
	(emit_case_decision_tree): Pass default_prob to emit_case_nodes.
	(get_outgoing_edge_probs): New function.
	(conditional_probability): Likewise.
	(reset_out_edges_aux): Likewise.
	(compute_cases_per_edge): Likewise.
	(emit_case_dispatch_table): Update probabilities of edges coming out
	of the switch statement.