@@ -1,3 +1,8 @@
+2012-10-16  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/54889
+	* gfortran.dg/pr54889.f90: New test.
+
 2012-10-16  Eric Botcazou <ebotcazou@adacore.com>
 
 	* g++.dg/other/dump-ada-spec-2.C: New test.
